// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<AlbumCover /> should render without errors 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <a
        alt="Album Cover for Vault 9: Live in Seattle 12/8/1993"
        class="sc-bxivhb fgdRAd"
        data-testid="component-animated-cover"
        href="https://www.last.fm/music/Pearl+Jam/_/Animal+(Live)"
        name="Animal (Live)"
        src="https://lastfm.freetls.fastly.net/i/u/174s/c6aaab6608ee5ed79cac652a7a3d3cd9.jpg"
        style="transform: perspective(600px) rotateX(0deg) rotateY(0deg) scale(1);"
        title="Click/Enter to listen to Animal (Live) by Pearl Jam on Last.fm"
        width="240"
      >
        <img
          alt="Album Cover for Vault 9: Live in Seattle 12/8/1993"
          class="sc-ifAKCX eUovE"
          height="240"
          name="Animal (Live)"
          src="https://lastfm.freetls.fastly.net/i/u/174s/c6aaab6608ee5ed79cac652a7a3d3cd9.jpg"
          width="240"
        />
      </a>
    </div>
  </body>,
  "container": <div>
    <a
      alt="Album Cover for Vault 9: Live in Seattle 12/8/1993"
      class="sc-bxivhb fgdRAd"
      data-testid="component-animated-cover"
      href="https://www.last.fm/music/Pearl+Jam/_/Animal+(Live)"
      name="Animal (Live)"
      src="https://lastfm.freetls.fastly.net/i/u/174s/c6aaab6608ee5ed79cac652a7a3d3cd9.jpg"
      style="transform: perspective(600px) rotateX(0deg) rotateY(0deg) scale(1);"
      title="Click/Enter to listen to Animal (Live) by Pearl Jam on Last.fm"
      width="240"
    >
      <img
        alt="Album Cover for Vault 9: Live in Seattle 12/8/1993"
        class="sc-ifAKCX eUovE"
        height="240"
        name="Animal (Live)"
        src="https://lastfm.freetls.fastly.net/i/u/174s/c6aaab6608ee5ed79cac652a7a3d3cd9.jpg"
        width="240"
      />
    </a>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`<LastPlayedSong /> should render without errors 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div />
  </body>,
  "container": <div />,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`<LastPlayedSongCard /> should render without errors 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="sc-bwzfXH klsUJK"
      >
        <a
          alt="Album Cover for Vault 9: Live in Seattle 12/8/93"
          class="sc-bxivhb fgdRAd"
          data-testid="component-animated-cover"
          href="https://www.last.fm/music/Pearl+Jam/_/Animal+(Live)"
          name="Animal (Live)"
          src="https://lastfm.freetls.fastly.net/i/u/174s/c6aaab6608ee5ed79cac652a7a3d3cd9.jpg"
          style="transform: perspective(600px) rotateX(0deg) rotateY(0deg) scale(1);"
          title="Click/Enter to listen to Animal (Live) by Pearl Jam on Last.fm"
          width="240"
        >
          <img
            alt="Album Cover for Vault 9: Live in Seattle 12/8/93"
            class="sc-ifAKCX eUovE"
            height="240"
            name="Animal (Live)"
            src="https://lastfm.freetls.fastly.net/i/u/174s/c6aaab6608ee5ed79cac652a7a3d3cd9.jpg"
            width="240"
          />
        </a>
        <div
          class="sc-htpNat bSzeMz"
        >
          <h2
            class="track"
          >
            <a
              aria-label="Song Name: Animal (Live)"
              href="https://www.last.fm/music/Pearl+Jam/_/Animal+(Live)"
              title="Animal (Live)"
            >
              Animal (Live)
            </a>
          </h2>
          <p
            aria-label="Artist/Band Name: Pearl Jam"
            class="artist"
          >
            Pearl Jam
          </p>
          <span
            aria-label="Album Name: Vault 9: Live in Seattle 12/8/93"
            class="album"
          >
            Vault 9: Live in Seattle 12/8/93
          </span>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="sc-bwzfXH klsUJK"
    >
      <a
        alt="Album Cover for Vault 9: Live in Seattle 12/8/93"
        class="sc-bxivhb fgdRAd"
        data-testid="component-animated-cover"
        href="https://www.last.fm/music/Pearl+Jam/_/Animal+(Live)"
        name="Animal (Live)"
        src="https://lastfm.freetls.fastly.net/i/u/174s/c6aaab6608ee5ed79cac652a7a3d3cd9.jpg"
        style="transform: perspective(600px) rotateX(0deg) rotateY(0deg) scale(1);"
        title="Click/Enter to listen to Animal (Live) by Pearl Jam on Last.fm"
        width="240"
      >
        <img
          alt="Album Cover for Vault 9: Live in Seattle 12/8/93"
          class="sc-ifAKCX eUovE"
          height="240"
          name="Animal (Live)"
          src="https://lastfm.freetls.fastly.net/i/u/174s/c6aaab6608ee5ed79cac652a7a3d3cd9.jpg"
          width="240"
        />
      </a>
      <div
        class="sc-htpNat bSzeMz"
      >
        <h2
          class="track"
        >
          <a
            aria-label="Song Name: Animal (Live)"
            href="https://www.last.fm/music/Pearl+Jam/_/Animal+(Live)"
            title="Animal (Live)"
          >
            Animal (Live)
          </a>
        </h2>
        <p
          aria-label="Artist/Band Name: Pearl Jam"
          class="artist"
        >
          Pearl Jam
        </p>
        <span
          aria-label="Album Name: Vault 9: Live in Seattle 12/8/93"
          class="album"
        >
          Vault 9: Live in Seattle 12/8/93
        </span>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
